--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -232,6 +232,6 @@
   stringstyle=\color{bluekeywords},     % string literal style
   tabsize=4,                       % sets default tabsize to 2 spaces
   frame=single,
-  style=cswc,
+  style=nc,
   literate= {Å}{{\AA}}1 {å}{{\aa}}1
 }
