--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -81,12 +81,91 @@ expected.
 \centering
 \begin{tikzpicture}
 	\begin{axis}[xlabel={Angle}, ylabel={Distance}, xmin=0,
-	ymin=0, minor tick num = 3, /pgfplots/grid = both, axis lines =
-	left,legend style={ at={(1.3,0.5)}, anchor=center}] 
+	ymin=0,xmax=60,ymax=280, minor tick num = 3, /pgfplots/grid = both, axis lines
+	= left,legend style={ at={(1.3,0.5)}, anchor=center}] 
 	\addplot[blue] expression[domain=0:50,samples=300]{-0.0035*x^3 + 0.2498*x^2 -
 	1.957*x + 114.27}; 
 	\addlegendentry{Average}
-	\addplot[red,only marks] table {data/DistVSAngleTestset1.dat};
+	\addplot[red,only marks]table {data/DistVSAngleTestset1.dat}
+	[xshift=4pt,yshift=8pt]
+	node[pos=0]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+	node[pos=0.1]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+	node[pos=0.2]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+	node[pos=0.3]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+	node[pos=0.4]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+	node[pos=0.5]{%
+		\pgfplotspointplotattime
+		$(\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/x}},
+		\pgfmathprintnumber
+		{\pgfkeysvalueof{/data point/y}})$
+	}
+% 	node[pos=0.6]{%
+% 		\pgfplotspointplotattime
+% 		$(\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/x}},
+% 		\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/y}})$
+% 	}
+% 	node[pos=0.7]{%
+% 		\pgfplotspointplotattime
+% 		$(\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/x}},
+% 		\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/y}})$
+% 	}
+% 	node[pos=0.8]{%
+% 		\pgfplotspointplotattime
+% 		$(\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/x}},
+% 		\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/y}})$
+% 	}
+% 	node[pos=0.9]{%
+% 		\pgfplotspointplotattime
+% 		$(\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/x}},
+% 		\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/y}})$
+% 	}
+% 	node[pos=1]{%
+% 		\pgfplotspointplotattime
+% 		$(\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/x}},
+% 		\pgfmathprintnumber
+% 		{\pgfkeysvalueof{/data point/y}})$
+% 	}
+	;
 	\addlegendentry{Data}
 	\end{axis}
 \end{tikzpicture}
