--- a/sections/Implementation/WaitAndFire.tex
+++ b/sections/Implementation/WaitAndFire.tex
@@ -1,15 +1,15 @@
 \section{WaitAndFire}
 When \name has collected enough data to calculate where the target is going to
-be in the future, the task WaitAndFire is performed. This task makes \name stop
-collecting data, loads the canon, turns to the calculated angle, angles the
+be in the future, the task \textbf{WaitAndFire} is performed. This task makes
+\name stop collecting data, loads the canon, turns to the calculated angle, angles the
 canon vertically and waits until the right time to fire. When it is done fireing
 it starts to track again.\nl
 
 This task calls three functions to get it ready to fire. The first function is
-LoadRound() which pushes the piston out so that the projectile is locked in
-place. The second is RotateH() which turns \name horisontally to the future
-position of the target. The third function angles the canon vertically based on
-the distance to the target. These three function calls can be seen in
+\textbf{LoadRound} which pushes the piston out so that the projectile is locked
+in place. The second is \textbf{RotateH} which turns \name horisontally to the
+future position of the target. The third function called \textbf{Angle} angles
+the canon vertically based on the distance to the target. These three function calls can be seen in
 \autoref{Funccall}\nl
 
 \begin{minipage}[H]{\linewidth}
@@ -27,13 +27,17 @@ task WaitAndFire(){
 \end{lstlisting}
 \end{minipage}
 
+The data Contained in the struct called \textbf{fire} is calculated in the the
+function \textbf{CalcFireData} and \textbf{CalcFuturePos}, which is explained in
+\autoref{RepScheme}
+
 The Functionality that determines when to fire is contained in a while loop with
 an if statement that checks if the current time is bigger than or equal to the
-time to fire which is contained in the struct called fire. This is seen in
-\autoref{Whentofire}\nl
+time to fire which is contained in the struct called \textbf{fire}. This is seen
+in \autoref{Whentofire}\nl
  
 \begin{minipage}[H]{\linewidth}
-\begin{lstlisting}[caption = While that determines when to fire, label =
+\begin{lstlisting}[caption = While loop that determines when to fire, label =
 Whentofire, style = nc] ...
 while(true){
         if(CurrentTick() >= fire.timeToHit){
@@ -43,6 +47,7 @@ while(true){
     }
 \end{lstlisting}
 \end{minipage}
+
 
 
 
