--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -10,7 +10,8 @@
   title={Real-Time Computing: A New Discipline of Computer Science and Engineering},
   author={Kang G. Shin, Parameswaran Ramanathan},
   journal={IEEE},
-  year={1994}
+  year={1994},
+  url={http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=259423}
 }
 
 @book{OrbitBA,
@@ -135,49 +136,49 @@
 @MISC{NXTHistory,
 
 	title = {History of LEGO Robotics},
-	
+
 	note = {seen 02/11/2016},
-	
+
 	howpublished = {\url{https://www.lego.com/en-us/mindstorms/history}}
-	
-} 
+
+}
 
 @MISC{NXTProgrammingLanguage,
 
 	title = {Nine alternative programming languages for LEGO MINDSTORMS},
-	
+
 	note = {seen 02/11/2016},
-	
+
 	howpublished = {\url{http://www.legoengineering.com/alternative-programming-languages/}}
-	
+
 }
 
 @MISC{ArduinoComponents,
 
 	title = {Components},
-	
+
 	note = {seen 02/11/2016},
-	
+
 	howpublished = {\url{https://store.arduino.cc/category/6}}
-	
+
 }
 
 @MISC{NXCIntro,
 
 	title = {NXC Introduction},
-	
+
 	note = {seen 30/11/2016},
-	
+
 	howpublished = {\url{http://bricxcc.sourceforge.net/nbc/nxcdoc/nxcapi/intro.html}}
-	
+
 }
 
 @MISC{NXCVariables,
 
 	title = {NXC Variables},
-	
+
 	note = {seen 30/11/2016},
-	
+
 	howpublished = {\url{http://bricxcc.sourceforge.net/nbc/nxcdoc/nxcapi/vars.html}}
-	
+
 }
